# axor-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: acceptance-tests.md  adapters.md  agent-connection.md  architecture-boundary.md  canonicalization-vectors.json  claims.md  control-plane-handoff.md  domain-model.md  endpoint-protocol.md  lifecycle.md  mvp-contract.md  provenance-semantics.md  runner-protocol.md  statistics.md  threat-model.md  ui-backend-contract.md  validate.py  validate_slice.py  vertical-slice.md
contracts/examples/: slice-examples.json
contracts/schemas/: bundle.schema.json  condition.schema.json  experiment.schema.json  predicate.schema.json  tool-manifest.schema.json  trace.schema.json
deploy/: PILOT.md  README.md
docs/: IMPLEMENTATION_PLAN.md  POST_MVP_PLAN.md  REVIEW_RESPONSE.md
docs/design/: axor-packaging.md  cp-monetization.md  lab-economics.md  outreach-targets.md  spec-lab.md
docs/spec-v0.3/: CONFORMANCE.md  axor-packaging.md  cp-monetization.md  spec-lab.md
examples/: banking-exfil-01.axl
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  router.ts  store.ts  theme.ts  utilities.css
lab_adapters/: __init__.py  agentdojo.py  errors.py
lab_agent/: __init__.py  backends.py  cost.py  errors.py  langchain_backend.py  wrapped.py
lab_analysis/: __init__.py  errors.py  stats.py
lab_client/: __init__.py  adapter.py  runner_adapter.py  runtime_client.py
lab_client/frameworks/: __init__.py  axor_claude.py  axor_langchain.py
lab_contracts/: __init__.py  bundle.py  canonical.py  errors.py  inputs.py  publication.py  schemas.py  semantics.py  signing.py  subset_validator.py
lab_contracts/schemas/: attestation.schema.json  bundle.schema.json  condition.schema.json  experiment.schema.json  publication.schema.json  scenario.schema.json  (+1 more)
lab_endpoint/: __init__.py  black_box.py  errors.py  gateway.py  gating.py  instrumented.py  safety.py
lab_entitlement/: __init__.py  errors.py  gate.py  license.py  signing.py
lab_games/: __init__.py  errors.py  federation.py  runtime.py  stats.py
lab_ref/: __init__.py  bundle.py  effects.py  errors.py  inputs.py  kernel.py  predicates.py  regression.py  replay.py  runner.py  stats.py  validation.py
lab_runner/: __init__.py  __main__.py  agents.py  axor_backend.py  bundle_io.py  claims.py  cli.py  cp_export.py  effects.py  errors.py  evidence.py  experiment_file.py  incident.py  kernel.py  ledger.py  predicates.py  regression.py  replay.py  runner.py  simulator.py  worker.py
lab_sandbox/: __init__.py  errors.py  executor.py  policy.py
lab_server/: __init__.py  __main__.py  app.py  audit.py  errors.py  html.py  incidents.py  license.py  providers.py  recompute.py  regression_store.py  runtime_jobs.py  store.py  wrap_api.py
tests/: replay_worker.py  support.py  test_acceptance_01_validation.py  test_acceptance_02_simulation_safety.py  test_acceptance_03_trace_lineage.py  test_acceptance_04_evidence_case.py  test_acceptance_05_replay_exact.py  test_acceptance_06_statistics.py  test_acceptance_07_claims_typed.py  test_acceptance_08_bundle_roundtrip.py  test_acceptance_09_provenance_axes.py  test_acceptance_10_regression.py  test_agentdojo_adapter.py  test_api_catalog.py  test_budget_aware_design.py  test_bundle_graph_integrity.py  test_byok_agent.py  test_canonicalization_vectors.py  test_cassette_per_scenario.py  test_cli_e2e.py  test_cold_load_resilience.py  test_comparison_design.py  test_content_length_hardening.py  test_contract_parity.py  test_contract_parity_r15.py  test_contract_parity_r6.py  test_contract_validator_types.py  test_cost_ceiling.py  test_cp_bridge_policy.py  test_cp_export.py  test_driving_value_id.py  test_endpoint_kernel_identity.py  test_entitlement.py  test_evidence_lineage_takedown.py  test_evidence_rendering.py  test_failure_complete_analysis.py  test_frameworks.py  test_gateway_args_binding.py  test_gateway_concurrency.py  test_gateway_conformity.py  (+58 more)
(+31 files in other folders)
