[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axor-lab"
version = "0.1.0"
description = "Axor Lab — reproducible governance experiments for AI agents: local runner, exact replay, EvidenceCase, regression pinning"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
# deliberately dependency-free: the contract validator, runner, replay and
# statistics engine are stdlib-only (see contracts/ and the acceptance suite)
dependencies = []

[project.scripts]
axor-lab = "lab_runner.cli:main"

[tool.setuptools]
packages = [
    "lab_contracts",
    "lab_analysis",
    "lab_runner",
    "lab_adapters",
    "lab_server",
    "lab_agent",
    "lab_entitlement",
    "lab_endpoint",
    "lab_sandbox",
    "lab_games",
]

# ship the contract schemas as package data so an installed wheel is
# self-contained (no AXOR_LAB_CONTRACTS needed outside a checkout). The source
# of truth is contracts/schemas/; lab_contracts/schemas/ is a build-time copy
# kept byte-identical by tests/test_packaging.py.
[tool.setuptools.package-data]
lab_contracts = ["schemas/*.schema.json"]

[project.optional-dependencies]
# the BYOK Anthropic backend; the cassette path and everything else is stdlib
byok = ["anthropic>=0.40"]
# Ed25519 license + bundle signing (same crypto as the Control Plane license)
crypto = ["pynacl>=1.5"]
# the REAL production kernel: govern with axor_core.ToolCallGovernor instead of
# the reference taint_floor. Without it, Lab falls back to the reference kernel.
kernel = ["axor-core>=0.9"]

# NOTE: installed wheels need the contract schemas next to the code; until
# schemas ship as package data (Phase 4 packaging work), point
# AXOR_LAB_CONTRACTS at a checkout's contracts/ directory when running
# outside the repo.
